--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 	<groupId>org.spinrdf</groupId>
 	<artifactId>spinrdf</artifactId>
 	<packaging>jar</packaging>
-	<version>3.0.0-SNAPSHOT</version>
+	<version>4.0.0-SNAPSHOT</version>
 	<name>SPIN RDF API</name>
 	<url>http://spinrdf.org/</url>
 
@@ -70,7 +70,7 @@
 		<dependency>
 			<groupId>org.apache.jena</groupId>
 			<artifactId>apache-jena-libs</artifactId>
-			<version>3.13.1</version>
+			<version>5.0.0-rc1</version>
       <type>pom</type>
 		</dependency>
 	</dependencies>
@@ -89,13 +89,12 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.6.0</version>
+				<version>3.12.1</version>
 				<configuration>
 					<debug>true</debug>
 					<debuglevel>source,lines,vars</debuglevel>
 					<optimize>true</optimize>
-					<source>1.8</source>
-					<target>1.8</target>
+					<release>17</release>
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
@@ -139,7 +138,15 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>  
-        <version>2.10.4</version>
+        <version>3.6.3</version>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
 				<configuration>
 					<quiet>true</quiet>
 					<encoding>UTF-8</encoding>
@@ -149,6 +156,7 @@
 					<show>protected</show>
 					<detectLinks>true</detectLinks>
 					<excludePackageNames>*.examples:*.impl:*.internal</excludePackageNames>
+					<doclint>none</doclint>
 				</configuration>
 			</plugin>
 
